# IceBrakes

./: .coveragerc  .gitignore  .pylintrc  CONTRIBUTING.txt  LICENSE  LICENSE.txt  README.md  README.txt  commands.txt  mypy.ini  pyproject.toml  pyrightconfig.json  unifier.sh
docs/: API.txt  CONTRIBUTING.txt  IceBrakes API.txt  README.txt  TESTING_README.txt  TODO.txt  algo_change_history.txt  bug_tracker.txt  manifest.txt  test_manifest.txt
relegated/: _test_0009.py  icebrakes_v0.0.7.py  icebrakes_v0.1.3.py  icebrakes_v0.1.5.py  icebrakes_v0.1.7  icebrakes_v0.1.7.py
relegated/old_versions/: icebrakes_v0.0.7.py  icebrakes_v0.1.8.py
relegated/tests/: _test_0007.py  _test_0010.py  _test_0012.py  _test_1003.py
scripts/: cleanup_toggle.py  pre-commit
src/: __init__.py  directories.py  icebrakes.py  loops.py  multiline_comments.py  multiline_trainer.txt  skiplines.py  strings.py  whitespace.py
src/scripts/: cleanup_toggle.py  pre-commit
src/tests/: __init__.py  template.py  test_manifest.txt  tools.py
src/tests/data/perm/: test_####.txt  test_0000.txt  test_0001.txt  test_0002.txt  test_0004.txt  test_0005.txt  test_0006.txt  test_0011.txt  test_0013.txt  test_0014.txt  test_0015.txt  test_0016.txt  test_0017.txt  test_0018.txt  test_1003.txt
src/tests/tests/: __init__.py  _test_0005.py  _test_0006.py  _test_0007.py  _test_0008.py  _test_0009.py  _test_0010.py  _test_0012.py  _test_0016.py  test_0000.py  test_0001.py  test_0002.py  test_0003.py  test_0004.py  test_0011.py  test_0013.py  test_0014.py  test_0015.py  test_0016.py  test_0017.py  test_0018.py  test_1001.py  test_1002.py  test_1003.py  test_2000.py  test_9999_cleanup.py
